@@ -26,10 +26,11 @@ import java.util.Set;
 public class AlternateFormatsCountryCodeSet {
   // A set of all country codes for which data is available.
   static Set<Integer> getCountryCodeSet() {
-    // The capacity is set to 6 as there are 5 different country codes,
+    // The capacity is set to 8 as there are 6 different country codes,
     // and this offers a load factor of roughly 0.75.
-    Set<Integer> countryCodeSet = new HashSet<Integer>(6);
+    Set<Integer> countryCodeSet = new HashSet<Integer>(8);
 
+    countryCodeSet.add(43);
     countryCodeSet.add(44);
     countryCodeSet.add(49);
     countryCodeSet.add(55);
